--- a/12月/lecture/6.s081.md
+++ b/12月/lecture/6.s081.md
@@ -372,6 +372,8 @@ Xv6没有实现ps程序，要列出当前进程可以在Xv6的终端里中输入
 调试Xv6时发生读取空指针，缓冲区溢出等错误时CLion不会报错，但是会导致调试异常，当系统中断，跳转到spinlock.c等文件内时需要格外注意。
 在CLion内可以用ctrl+alt+h来查看一个函数被哪些函数调用了。
 
+##　
+
 
 
 ## GNU Debugger
@@ -427,6 +429,375 @@ RISC-V架构下利用QEMU进行GDB调优
   `layout asm`：查看汇编 `layout reg`：查看寄存器 `info reg`：查看寄存器 `b *0x1234`：在指定地址设定断点
 
   `Ctrl+a c`：进入控制模式 `info mem`：打印页表x`
+  
+  
+  
+  
+
+## GCC命令
+
+![image-20221201182643963](https://raw.githubusercontent.com/lozijy/image/main/image-20221201182643963.png)
+
+## makefile
+
+makefile定义了一系列的规则来指定，哪些文件需要先编译，哪些文件需要后编译，哪些文件需要重新编译，甚至于进行更复杂的功能操作，因为makefile就像一个Shell脚本一样，其中也可以执行操作系统的命令。makefile带来的好处就是——“自动化编译”，一旦写好，只需要一个make命令，整个工程完全自动编译，极大的提高了软件开发的效率。make是一个命令工具，是一个解释makefile中指令的命令工具，一般来说，大多数的IDE都有这个命令，比如：Delphi的make，Visual C++的nmake，Linux下GNU的make。可见，makefile都成为了一种在工程方面的编译方法。
+
+首先要把源文件编译成***\*中间代码文件\****，在Windows下也就是 .obj 文件，UNIX下是 .o 文件，即 Object File，这个动作叫做***\*编译（compile）\****。然后再把大量的Object File合成执行文件，这个动作叫作链接（link）。  
+
+
+
+**链接时**，主要是链接函数和全局变量，所以，我们可以使用这些中间目标文件（O文件或是OBJ文件）来链接我们的应用程序。链接器并不管函数所在的源文件，只管函数的中间目标文件（Object File），在大多数时候，由于源文件太多，编译生成的中间目标文件太多，而在链接时需要明显地指出中间目标文件名，这对于编译很不方便，所以，我们要给中间目标文件打个包，在Windows下这种包叫“***\*库文件”（Library File)\****，也就是 .lib 文件，在UNIX下，是Archive File，也就是 .a 文件。
+
+#### 规则
+
+我们的规则是：
+      1.如果这个工程没有编译过，那么我们的所有C文件都要编译并被链接。
+
+​      2.如果这个工程的某几个C文件被修改，那么我们只编译被修改的C文件，并链接目标程序。
+
+​      3.如果这个工程的头文件被改变了，那么我们需要编译引用了这几个头文件的C文件，并链接目标程序。
+
+#### 语法
+
+ **target... : prerequisites ...**
+
+​     **command**
+
+​     **...**
+
+​     **...
+​     -------------------------------------------------------------------------------**
+
+​    **target**也就是一个目标文件，可以是**Object File**，也可以是执行文件。还可以是一个标签（Label），对于标签这种特性，在后续的“伪目标”章节中会有叙述。
+
+​    **prerequisites**就是，要生成那个target所需要的文件或是目标。
+
+​    **command**也就是make需要执行的命令。（任意的Shell命令）
+
+ 【注】：在看别人写的Makefile文件时，你可能会碰到以下三个变量：$@，$^，$<代表的意义分别是： 
+
+​          他们三个是十分重要的三个变量，所代表的含义分别是：
+
+​          $@--目标文件，$^--所有的依赖文件，$<--第一个依赖文件。
+
+
+
+```makefile
+clean:
+	@rm -rf $(BUILD_DIR) || exit 1
+run: $(BUILD_DIR)/$(OS_ISO)
+	@qemu-system-i386 $(QEMU_OPTIONS)
+	@sleep 1
+	@telnet 127.0.0.1 $(QEMU_MON_PORT)
+```
+
+
+
+
+
+```makefile
+   edit : main.o kbd.o command.o display.o \
+
+          insert.o search.o files.o utils.o
+
+           cc -o edit main.o kbd.o command.o display.o \
+
+                      insert.o search.o files.o utils.o
+
+ 
+
+   main.o : main.c defs.h
+
+           cc -c main.c
+
+   kbd.o : kbd.c defs.h command.h
+
+           cc -c kbd.c
+
+   command.o : command.c defs.h command.h
+
+           cc -c command.c
+
+   display.o : display.c defs.h buffer.h
+
+           cc -c display.c
+
+   insert.o : insert.c defs.h buffer.h
+
+           cc -c insert.c
+
+   search.o : search.c defs.h buffer.h
+
+           cc -c search.c
+
+   files.o : files.c defs.h buffer.h command.h
+
+           cc -c files.c
+
+   utils.o : utils.c defs.h
+
+           cc -c utils.c
+
+   clean :
+
+           rm edit main.o kbd.o command.o display.o \
+
+              insert.o search.o files.o utils.o
+```
+
+##### 变量
+
+设置变量objcts
+
+```makefile
+ objects = main.o kbd.o command.o display.o \
+
+             insert.o search.o files.o utils.o
+ 
+```
+
+于是，我们就可以很方便地在我们的makefile中以***\*“$(objects)”\****的方式来使用这个变量了，于是我们的改良版makefile就变成下面这个样子：
+
+```makefile
+   objects = main.o kbd.o command.o display.o \
+             insert.osearch.o files.o utils.o 
+   edit : $(objects)
+           cc -o edit $(objects)
+   main.o : main.c defs.h
+           cc -c main.c
+   kbd.o : kbd.c defs.h command.h
+           cc -c kbd.c
+   command.o : command.c defs.h command.h
+           cc -c command.c
+   display.o : display.c defs.h buffer.h
+           cc -c display.c
+   insert.o : insert.c defs.h buffer.h
+           cc -c insert.c
+   search.o : search.c defs.h buffer.h
+           cc -c search.c
+   files.o : files.c defs.h buffer.h command.h
+           cc -c files.c
+   utils.o : utils.c defs.h
+           cc -c utils.c
+   clean :
+           rm edit $(objects)
+```
+
+于是如果有新的 .o 文件加入，我们只需简单地修改一下 objects 变量就可以了。
+
+
+
+##### make自动推导
+
+GNU的make可以自动推导文件以及文件依赖关系后的命令,make会自动识别并自己推导命令
+
+```makefile
+  objects = main.o kbd.o command.o display.o \
+             insert.o search.o files.o utils.o
+ 
+   edit : $(objects)
+           cc -o edit $(objects)
+ 
+   main.o : defs.h
+   kbd.o : defs.h command.h
+   command.o : defs.h command.h
+   display.o : defs.h buffer.h
+   insert.o : defs.h buffer.h
+   search.o : defs.h buffer.h
+   files.o : defs.h buffer.h command.h
+   utils.o : defs.h
+ 
+   .PHONY : clean
+   clean :
+           rm edit $(objects)
+```
+
+“.PHONY”表示，clean是个伪目标文件。
+
+
+
+##### 另类风格的makefile
+
+```makefile
+   objects = main.o kbd.o command.o display.o \
+             insert.o search.o files.o utils.o
+ 
+   edit : $(objects)
+           cc -o edit $(objects)
+ 
+   $(objects) : defs.h
+   kbd.o command.o files.o : command.h
+   display.o insert.o search.o files.o : buffer.h
+ 
+   .PHONY : clean
+   clean :
+           rm edit $(objects)
+```
+
+
+
+##### include
+
+在Makefile使用include关键字可以把别的Makefile包含进来，这很像C语言的#include，被包含的文件会原模原样的放在当前文件的包含位置。
+
+  include foo.make *.mk $(bar)
+
+等价于：
+
+  include foo.make a.mk b.mk c.mk e.mk f.mk
+
+make命令开始时，会把找寻include所指出的其它Makefile，并把其内容安置在当前的位置。就好像C/C++的#include指令一样。如果文件都没有指定绝对路径或是相对路径的话，make会在当前目录下首先寻找，如果当前目录下没有找到，那么，make还会在下面的几个目录下找：
+
+```sh
+1.如果make执行时，有“-I”或“--include-dir”参数，那么make就会在这个参数所指定的目录下去寻找。
+2.如果目录/include（一般是：/usr/local/bin或/usr/include）存在的话，make也会去找。
+```
+
+```makefile
+include config/make-locations
+include config/make-os
+include config/make-cc
+include config/make-debug-tool
+```
+
+ 如果有文件没有找到的话，make会生成一条警告信息，但不会马上出现致命错误。它会继续载入其它的文件，一旦完成makefile的读取，make会再重试这些没有找到，或是不能读取的文件，如果还是不行，make才会出现一条致命信息。如果你想让make不理那些无法读取的文件，而继续执行，你可以在include前加一个减号“-”。如：
+
+-include<filename>
+
+
+
+##### 环境变量
+
+建议不看
+
+##### make的工作方式
+
+```sh
+1.        读入所有的Makefile。
+
+2.        读入被include的其它Makefile。
+
+3.        初始化文件中的变量。
+
+4.        推导隐晦规则，并分析所有规则。
+
+5.        为所有的目标文件创建依赖关系链。
+
+6.        根据依赖关系，决定哪些目标要重新生成。
+
+7.        执行生成命令。
+```
+
+#### Makefile书写规则
+
+##### 通配符
+
+##### 文件搜寻
+
+vpath
+
+##### 伪目标
+
+.PHONY clean
+
+##### 多目标
+
+多个目标依赖同一个命令可以会出现问题，我们有自动化变量把其合并起来
+
+``` makefile
+  bigoutput littleoutput : text.g
+
+      generate text.g -$(subst output,,$@) > $@
+```
+
+  上述规则等价于：
+
+```makefile
+   bigoutput : text.g
+
+           generate text.g -big > bigoutput
+
+   littleoutput : text.g
+
+           generate text.g -little > littleoutput
+```
+
+
+
+其中，-$(subst output,,$@)中的“$”表示执行一个Makefile的函数，函数名为subst，后面的为参数。关于函数，将在后面讲述。这里的这个函数是截取字符串的意思，“$@”表示目标的集合，就像一个数组，“$@”依次取出目标，并执于命令。
+
+##### 静态模式
+
+静态模式更容易定义多目标的规则，语法
+
+```makefile
+<targets...>: <target-pattern>: <prereq-patterns ...>
+
+　　　<commands>
+```
+
+ targets定义一系列目标文件
+
+target-pattern指明了targets的模式
+
+prereq-patterns是目标的依赖模式，它对target-pattern形成的模式再进行一次依赖目标的定义
+
+
+
+  
+
+ ```makefile
+ objects = foo.o bar.o
+ 
+  
+ 
+   all: $(objects)
+ 
+ 
+   $(objects): %.o: %.c
+ 
+       $(CC) -c $(CFLAGS) $< -o $@
+ ```
+
+
+
+上面的例子中，指明了我们的目标从$object中获取，“%.o”表明要所有以“.o”结尾的目标，也就是“foo.o bar.o”，也就是变量$object集合的模式，而依赖模式“%.c”则取模式“%.o”的“%”，也就是“foobar”，并为其加下“.c”的后缀，于是，我们的依赖目标就是“foo.cbar.c”。而命令中的“$<”和“$@”则是自动化变量，“$<”表示所有的依赖目标集（也就是“foo.c bar.c”），“$@”表示目标集（也褪恰癴oo.o bar.o”）。于是，上面的规则展开后等价于下面的规则：
+
+
+
+另一个例子:
+
+```makefile
+ files = foo.elc bar.o lose.o
+
+ 
+
+   $(filter %.o,$(files)): %.o: %.c
+
+           $(CC) -c $(CFLAGS) $< -o $@
+
+   $(filter %.elc,$(files)): %.elc: %.el
+
+           emacs -f batch-byte-compile $<
+```
+
+$(filter%.o,$(files))表示调用Makefile的filter函数，过滤“$filter”集，只要其中模式为“%.o”的内容。这个例字展示了Makefile中更大的弹性。
+
+##### 自动生成依赖
+
+在Makefile中，我们的依赖关系可能会需要包含一系列的头文件，比如，如果我们的main.c中有一句“#include "defs.h"”，那么我们的依赖关系应该是：
+
+  main.o : main.c defs.h
+
+
+
+#### 变量
+
+#### 函数
+
+#### make的运行
+
+
 
 # 第一章 Operating system interfaces
 
@@ -774,7 +1145,24 @@ unlink("/tmp/xyz");
 
 ## 真实世界
 
-1.
+#### POSIX标准
+
+```sh
+POSIX 标准定义了操作系统应该为应用程序提供的接口标准，是 IEEE 为要在各种 UNIX 操作系统上运行的软件而定义的一系列 API 标准的总称，其正式称呼为 IEEE 1003，而国际标准名称为 ISO/IEC 9945。POSIX 标准意在期望获得源代码级别的软件可移植性。换句话说，为一个 POSIX 兼容的操作系统编写的程序，应该可以在任何其它的 POSIX 操作系统（即使是来自另一个厂商）上编译执行。
+
+　　POSIX 并不局限于 UNIX。许多其它的操作系统，例如 DEC OpenVMS 支持 POSIX 标准，尤其是 IEEE Std. 1003.1-1990（1995 年修订）或 POSIX.1，POSIX.1 提供了源代码级别的 C 语言应用编程接口（API）给操作系统的服务程序，例如读写文件。POSIX.1 已经被国际标准化组织（International Standards Organization，ISO）所接受，被命名为 ISO/IEC 9945-1:1990 标准。
+POSIX.1 仅规定了系统服务应用程序编程接口（API），仅概况了基本的系统服务标准。
+Linux 刚刚起步的时候，这个 UNIX 标准为 Linux 提供了极为重要的信息，使得 Linux 能够在标准的指导下进行开发，并能够与绝大多数 UNIX 操作系统兼容。
+posix标准的出现就是为了解决这个问题。linux和windows都要实现基本的posix标准，linux把fork函数封装成posix_fork（随便说的），windows把creatprocess函数也封装成posix_fork，都声明在unistd.h里。
+
+这样，程序员编写普通应用时候，只用包含unistd.h，调用posix_fork函数，程序就在源代码级别可移植了。
+```
+
+
+
+#### Xv6和POSIX不兼容
+
+
 
 Unix系统调用接口已经通过便携式操作系统接口(POSIX)标准进行了标准化。Xv6与POSIX不兼容:它缺少许多系统调用(包括lseek等基本系统调用)，并且它提供的许多系统调用与标准不同。我们xv6的主要目标是简单明了，同时提供一个简单的类unix系统调用接口。为了运行基本的Unix程序，有些人扩展了xv6，增加了一些系统调用和一个简单的c库。然而，现代内核比xv6提供了更多的系统调用和更多种类的内核服务。例如，它们支持网络工作、窗口系统、用户级线程、许多设备的驱动程序等等。现代内核不断快速发展，提供了许多超越POSIX的特性。
 
