--- a/12月/6级/六级/词汇.md
+++ b/12月/6级/六级/词汇.md
@@ -4795,5 +4795,87 @@ internal his internal organs
 
 rip the poster had been ripped to pieces
 
-se
+### 12.3
+
+avert avert the hazard
+
+gospel the man was preaching the Gospel
+
+regulatory have a regulatory framework
+
+grope he grope his way through the darkness
+
+henceforth the man was henceforth terrified of ropes
+
+herald As a herald, Zhangqian   went to the western regions
+
+session the court in session , and the lawyer is presenting the evidence
+
+herbal the ingredients of herbal medicine
+
+interpretation his English-Chinese interpretation
+
+hitherto Hitherto, the prince's MISS Right
+
+dawn
+
+hive many bees live in this hive
+
+groove the sliding doors move inside the grooves
+
+intrude A cat intruded into the classroom and studied with these students
+
+hierarchical our company has a hierarchical structure
+
+introductory the introductory course
+
+deprivation the criminal suffered the deprivation of political rights
+
+recognition the medal in recognition of my sports skills
+
+fortnight 堡垒之夜(滑稽)
+
+warrant we have a warrant for your arrest
+
+indigenous the giant panda is an animal which is indigenous to China
+
+harassment Harassment from bullies
+
+turmoil the company was in turmoil
+
+craft crafts usually involve making things skillfully with one's hands
+
+humid the air is humid
+
+seminar holding a math seminar
+
+obese the obese man
+
+emulation worthy of emulation
+
+hypocrisy If you only pretend to be good to others, that is hypocrisy
+
+tract the digestive tract
+
+hound My little hound
+
+huddle Baby penguins huddle together
+
+haven a safe haven from the scary sharks
+
+hibernate bears can sleep for months when they hibernate
+
+ideological ideological beliefs
+
+hypocrite
+
+obesity
+
+illicit seized the illicit drugs
+
+illiterate illiterates cannot read
+
+atlas the atlas contains information about all the countries in the world
+
+humiliation he faces the humiliation of having to apologize for cheating in the exam
 
