--- a/12月/OS/中断.md
+++ b/12月/OS/中断.md
@@ -58,6 +58,6 @@ iret假定error code不存在
 
 ![image-20221204000728877](https://raw.githubusercontent.com/lozijy/image/main/image-20221204000728877.png)
 
-2.同时注入leave,可以，但这是假设errorcode不存在.
+2.同时注入leave,可以，但这是假设errorcode不存在,所以也不行
 
 ![image-20221204000917829](https://raw.githubusercontent.com/lozijy/image/main/image-20221204000917829.png)
