--- a/12月/英语/六级/词汇.md
+++ b/12月/英语/六级/词汇.md
@@ -4879,3 +4879,137 @@ atlas the atlas contains information about all the countries in the world
 
 humiliation he faces the humiliation of having to apologize for cheating in the exam
 
+
+
+### 12.4
+
+grind would you plz grind a pound aof coffee for me ?
+steep a steep hill
+
+indicate record profits in the retail market indicated a boom in the economy
+
+metropolitan metropolitan building
+
+cosmopolitan shanghai is a highly cosmopolitan city
+
+incentive food is an incentive in training pet dogs
+
+forthcoming
+
+pattern
+
+conscious the detective was very conscious of what was going on
+
+band
+
+revolve the earth revolves around the sun
+
+ceramic they bought many ceramic tiles
+
+elastic the girl tied her hair with an elastic band
+
+rival fierce fighting broke out between rival groups
+
+sensible she's a sensible sort of person
+
+virtually the twins are virtually identical
+
+spray the lady sprayed herself with perfume
+
+particle the medical device is airtight to keep dust particles out
+
+flat 
+
+locate the police are trying to locate the suspect for the bank robbery
+
+#### 百词斩
+
+jolly Santa looks as jolly as ever
+
+presumably the murderer is presumably a man who wears galsses
+
+leverage he used leverage to move the boulder
+
+intrinsic Confidence is a quality which is intrinsic to this man
+
+ingenious he's an ingenious boy
+
+precision this is a high-precision tool for measurements
+
+jelly hava a taste of my homemade orange jelly
+
+unleash Close the gate and unleash the dog
+
+incumbent the incumbent king is passing the crown to his successor.
+
+celebrity the celebrity got the attention of photographers and fans
+
+acupuncture I received acupuncture treatment for my back pain
+
+intricate the inside of this watch quite intricate
+
+infliction
+
+intimidation
+
+sanctuary his church became a sanctuary for thousands of people
+
+intellect his considerable intellect
+
+odds the odds of winning the prize
+
+insulator wires should be covered in an insulator like rubber
+
+hygienic keep it clean and hygienic
+
+inmate this inmate is being taken to his cell
+
+advent the advent of stone tools
+
+isle the small isle
+
+humanitarian she's a well-known humanitarian
+
+stunning the house has a stunning view of the sunset
+
+fiscal medical fiscal expenditure
+
+curve there are many curves in this mountain road
+
+incorporation the incorporation of a garden will raise the price of the house
+
+site the site of the new development will be by the sea
+
+neutral he remained neutral in the  disagreement
+
+impromptu he composed an impromptu poem
+
+fleet the big fleet of ships
+
+fortification the castle's fortification
+
+inaugurate we inaugurate the opening of the new store!
+
+indignation she was filled with indignation at the news that many workers' wages were defaulted
+
+
+
+ounce sixteen ounces equal to one pound
+
+hibernation
+
+hygiene
+
+dump
+
+slam he slam the door as he leaves
+
+indict the police find valid evidence to indict the wolf for murder
+
+dose recommended dose of his dedicine
+
+hurdle the athletes are jumping over the hurdles
+
+imprison they were imprisoned for offending the queen
+
+humiliate the poor boy was humiliated at school
