--- a/12月/英语/雅思/雅思词汇.md
+++ b/12月/英语/雅思/雅思词汇.md
@@ -38,6 +38,24 @@ authenticity her story is of doubtful authenticity
 
 ## 12.4
 
+复习
+
+furnace the piece of metal melts in the furnace and is then poured into various moulds
+
+bolster more money is needed to bolster the construction of the railway system
+
+扇贝
+
+crater you can see craters on the moon's surface with a telescope
+
+moderate moderate amount if stress can be beneficial
+
+distribute the newspaper is distributed free
+
+cohesion the lack of cohesion within the team
+
+
+
 ## 12.5
 
 ## 12.6
