--- a/12月/OS/给操作系统捋条线.md
+++ b/12月/OS/给操作系统捋条线.md
@@ -133,7 +133,7 @@ makefile:
 ```makefile
 bootblock:bootasm.S bootmain.c
 ################################
-ddif=bootblock of=xv6.img conv=notrunc
+ddnif=bootblock of=xv6.img conv=notrunc
 ```
 
 ![image-20221204123805590](https://raw.githubusercontent.com/lozijy/image/main/image-20221204123805590.png)
@@ -165,4 +165,182 @@ movb$0xdf,%al# 向端口0x60写入0xdf，打开A20
 outb%al,$0x60
 
 ```
+
+# 启动理论
+
+## 实模式下的内存分布
+
+实模式下线性地址就是物理地址，由于没有开启A20总线，寻址能力只有1MB，内存分布如下:
+
+![image-20221205000116510](https://raw.githubusercontent.com/lozijy/image/main/image-20221205000116510.png)
+
+关注最高位和7C00即可
+
+一个是BIOS入口地址，一个是MBR加载地址
+
+## 物理地址和物理地址空间
+
+1.
+
+![image-20221205000353302](https://raw.githubusercontent.com/lozijy/image/main/image-20221205000353302.png)
+
+2.
+
+![image-20221205000409458](https://raw.githubusercontent.com/lozijy/image/main/image-20221205000409458.png)
+
+## 实模式和保护模式
+
+实模式:
+
+寻址能力20
+
+寄存器只用了16位，寻址能力16
+
+所以用段基址:偏移量的分段方式使cpu寻址能力为20
+
+寄存器里存的是真实的物理地址，不安全，也不灵活
+
+
+
+## 保护模式
+
+地址总线32位
+
+通用寄存器，标志寄存器，指令指针寄存器拓展到32位，段寄存器不变
+
+引入GDT,现在寄存器里存放的是段选择子而非段基址，访问变安全了
+
+## GDT
+
+段描述符
+
+![image-20221205001316809](https://raw.githubusercontent.com/lozijy/image/main/image-20221205001316809.png)
+
+基址被映射成三部分
+
+DPL 描述符特权级 0最高 3最低
+
+
+
+段选择子
+
+![image-20221205001610479](https://raw.githubusercontent.com/lozijy/image/main/image-20221205001610479.png)
+
+寄存器里存的就是这玩意，每个进程都有一个，index是高13位，通过这个+GDT可以找到段基址，用过这个13我们可以确定共有2<<13 -1共8192个段
+
+RPL请求特权级，4个值0,1,2,3，主要用来进行特权级检查
+
+段级地址转换
+
+![image-20221205002030294](https://raw.githubusercontent.com/lozijy/image/main/image-20221205002030294.png)
+
+逻辑地址转换成线性地址的方法
+
+
+
+## 控制寄存器
+
+CR0
+
+PE: 1表示保护模式
+
+PG 1表示开启分页
+
+CR1
+
+CR2
+
+CR3
+
+CR4
+
+PSE位 1表示页面大小拓展为4M
+
+
+
+## 特权级
+
+![image-20221205002544874](https://raw.githubusercontent.com/lozijy/image/main/image-20221205002544874.png)
+
+0内核态
+
+1用户态
+
+![image-20221205002810933](https://raw.githubusercontent.com/lozijy/image/main/image-20221205002810933.png)
+
+## 保护模式
+
+开启A20总线
+
+构建加载GDT
+
+设置CR0的PE位
+
+
+
+## 分页
+
+分段是必须的，分页不是必须的
+
+## 一级页表和多级页表
+
+## 开启分页机制
+
+构建页表
+
+加载页目录物理地址到CR3寄存器
+
+## 各类地址
+
+逻辑地址
+
+线性地址
+
+虚拟地址
+
+物理地址
+
+## 地址转换
+
+1.段级转换
+
+2.页级转换
+
+## 平坦模式
+
+## 页面大小拓展
+
+CR4寄存器的PSE位置1
+
+把页面大小设置为1M
+
+## ELF文件格式
+
+文件布局
+
+文件头
+
+## 启动流程简要介绍
+
+## 
+
+## 中断控制器PIC
+
+## 
+
+## 
+
+## 
+
+## 
+
+## 
+
+## 
+
+## 
+
+## 
+
+
 
