--- a/12月/英语/六级/词汇.md
+++ b/12月/英语/六级/词汇.md
@@ -5013,3 +5013,106 @@ hurdle the athletes are jumping over the hurdles
 imprison they were imprisoned for offending the queen
 
 humiliate the poor boy was humiliated at school
+
+### 12.5
+
+#### 百词斩
+
+badge the boy received a badge for his good work
+
+bandage I hurt my hand , so I wrapped it in a bandage
+
+mandate have a mandate to search his house
+
+integral every link is integral to the strength of the chain
+
+jeopardy the man out himself in jeopardy by standing next to the falling wall
+
+jargon I didn't understand all the horse and riding jargon he was using
+
+judicial the judge , jury and witness are important participants in the judicial system
+
+judiciary judiciary systems interpret and apply the laws in the name of a state
+
+lad this group of lads
+
+requirement the company 's requirements for hiring are unusual
+
+incentive the carrot serves as an incentive to drive the horse
+
+lawsuit they have filed a lawsuit against the property dispute
+
+snail A small snail is climbing a tree
+
+dynamic the young lady is very dynamic
+
+invert  the cups are inverted on the table
+
+petrol fill my car with petrol
+
+lash the farmer lashed the cattle to speed him up
+
+jockey the two jockeys are competing to win the race
+
+airborne the airplane that is airborne
+
+rust the old cog is covered with rust
+
+lenient my mom was lenient about me failing the exam
+
+alternate a week of a alternate sunshine and rain
+
+lime I put some lime pieces in the water to add some flavor
+
+haze the forest haze
+
+lavish the living room is so lavish
+
+dignity with such regal dignity
+
+plight he fell into a desperate plight
+
+limp he 's walked with a limp
+
+pasta there are various kinds of pasta on the table
+
+fertile the dung of cows makes the land more fertile
+
+brink be careful on the brink
+
+longitude the place is at longitude 40 degrees
+
+linen the linen tablecloth is rough to touch
+
+mindset a growth mindset
+
+lieutenant we can tell his rank of lieutenant from his badges
+
+concede I had no choice but to concede
+
+exempt children under 1.2 meters tall are exempt from paying entrance fee
+
+trek the hikers are on a trek across the snowy mountain
+
+immense the immense universe
+
+outing the school are enjoying their spring outing
+
+lotion make sure to put on suntan lotion before you play in the sun
+
+protocol when presidents meet , protocol requires that they shake hands
+
+lounge wait in the lounge
+
+trail the cyclist is riding on the forest trail
+
+arrogant the arrogant man refused to listen to anyone
+
+trauma Soldiers often suffered from psychological trauma
+
+metabolism
+
+logistics the logistics regarding food and supplies were key to winning wars
+
+
+
