--- a/12月/英语/雅思/雅思词汇.md
+++ b/12月/英语/雅思/雅思词汇.md
@@ -58,6 +58,34 @@ cohesion the lack of cohesion within the team
 
 ## 12.5
 
+扇贝
+
+ultimately everything will ultimately depend on what is said at the meeting
+
+charter the company was granted a charter trade in the occupied territory
+
+upper the upper lip
+
+jostle the fans jostled and shoved to get a better view of the stage
+
+pepper freshly ground pepper
+
+throughout the museum is open daiy throughout the year
+
+transmute they said they could transmute lead nto gold
+
+attraction
+
+shore a rocky/ sandy shore
+
+notify plz notify us of any change of address
+
+impact the ocean will have an impact on environment
+
+prominent he played a prominent part in the team's victory
+
+
+
 ## 12.6
 
 ## 12.7
