--- a/12月/OS/中断.md
+++ b/12月/OS/中断.md
@@ -61,3 +61,21 @@ iret假定error code不存在
 2.同时注入leave,可以，但这是假设errorcode不存在,所以也不行
 
 ![image-20221204000917829](https://raw.githubusercontent.com/lozijy/image/main/image-20221204000917829.png)
+
+3.设计模式来救场门面模式
+
+let'scode
+
+
+
+interupt.S
+
+
+
+![image-20221205153850184](https://raw.githubusercontent.com/lozijy/image/main/image-20221205153850184.png)
+
+![image-20221205153920626](https://raw.githubusercontent.com/lozijy/image/main/image-20221205153920626.png)
+
+![image-20221205154137109](https://raw.githubusercontent.com/lozijy/image/main/image-20221205154137109.png)
+
+![image-20221205154200730](https://raw.githubusercontent.com/lozijy/image/main/image-20221205154200730.png)
