--- a/12月/英语/六级/词汇.md
+++ b/12月/英语/六级/词汇.md
@@ -5114,5 +5114,101 @@ metabolism
 
 logistics the logistics regarding food and supplies were key to winning wars
 
+### 12.6
+
+#### 百词斩
+
+eradicate
+
+menace
+
+magistrate
+
+alloy we  used a strong alloy for the blades of the engine
+
+martyrdom Jesus's martyrdom is considered the first in the history of Christianity
+
+fracture he has fractured the bone in his leg
+
+propeller I've been trained to fly single propeller planes
+
+malpractice the doctor's malpractice
+
+metaphor the city is the heart of the country . "heart " is used as a metaphor
+
+interrogation the suspect remained silent throughout the interroagtion
+
+ultra the goat is an ultra who takes extreme measure to fight for his cause
+
+proposal the woman accepted his marriage proposal
+
+susceptible
+
+coal he is holding a few pieces of coal
+
+jurisdiction the thief escaped into Germany which wasn't within the French police's jurisdiction
+
+soothe she took a hot bath to soothe
+
+detrimental Sweet food is detrimental to your teeth
+
+maternity she asked for maternity leave eight months into her pregnancy
+
+legitimate
+
+complacent the complacent programmer
+
+mandatory uniform hairstyle is a mandatory requirement
+
+limelight in the limelight
+
+prosperity the prosperity of the city is evident
+
+critical the injured man was in a critical condition
+
+cozy the baby looked very cozy
+
+martyr he died and was dubbed a martyr
+
+strip
+
+medication too much medication is not recommended
+
+lodging you can find all kinds of lodgings available on this website
+
+lucrative lucrative investments
+
+outrageous his outrageous behavior annoyed everyone
+
+loom the  girl is operating the loom
+
+loot after  the looting , there was nothing left  in the jewelry store
+
+lyrical
+
+malignant the tumor is malignant
+
+waterproof the kind of shoes is waterproof
+
+conscience my conscience always tells me to do something right
+
+ascribe we can ascribe his illness to undue work pressure
+
+intrigue an evil intrigue suddenly comes to his mind
+
+satire the cartoon depicts a satire of rich people's greed
+
+mar the wedding was marred by the bad weather
+
+salvage the wrecked ships have been salvaged from the sea
+
+bureau the federal bureau of investigation
+
+drum
+
+underneath
+
+
+
 
 
