--- a/12月/英语/雅思/雅思词汇.md
+++ b/12月/英语/雅思/雅思词汇.md
@@ -88,6 +88,46 @@ prominent he played a prominent part in the team's victory
 
 ## 12.6
 
+intermediate the country is now as an intermediate stage of development
+
+jaw the upper jaw
+
+parliament a new  education reform bill was passed by parliament last week
+
+photocopy the secretary was asked to prepare a photocopy of the report
+
+architect the guidebook is an architect by profession
+
+burst the dam burstd under the weight of water
+
+blend blend the eggs , milk and sugar
+
+clay clay is used to make things like ceramics and tiles
+
+ceremony a wdding ceremony
+
+district a tax district
+
+endure I was a fool to endure him for so long
+
+racket the poorly maintained old machine is making an awful racket
+
+cereal a bowl of cereal
+
+antidote sales of nerve gas antidotes decreased
+
+clash clashes broke out between police and demonstrators
+
+casualty the rapid rising number of casualties in the war 
+
+wean the calves had been weaned at five weeks of age
+
+pepper freshly ground pepper
+
+
+
+
+
 ## 12.7
 
 ## 12.8
