--- a/12月/lecture/6.s081.md
+++ b/12月/lecture/6.s081.md
@@ -2838,6 +2838,17 @@ sfence.vma刷新当前CPU的TLBxv6在重新加载`satp`寄存器后，在`kvmini
 
 分配器(allocator)位于***kalloc.c\***(***kernel/kalloc.c\***:1)中。分配器的数据结构是可供分配的物理内存页的空闲列表。每个空闲页的列表元素是一个`struct run`(***kernel/kalloc.c\***:17)。分配器从哪里获得内存来填充该数据结构呢？它将每个空闲页的`run`结构存储在空闲页本身，因为在那里没有存储其他东西。空闲列表受到自旋锁（spin lock）的保护(***kernel/kalloc.c\***:21-24)。列表和锁被封装在一个结构体中，以明确锁在结构体中保护的字段。现在，忽略锁以及对`acquire`和`release`的调用；第6章将详细查看有关锁的细节。
 
+```c
+struct run {
+  struct run *next;
+};
+
+struct {
+  struct spinlock lock;
+  struct run *freelist;
+} kmem;
+```
+
 
 
 #### 互斥锁和自旋锁
@@ -2850,6 +2861,32 @@ sfence.vma刷新当前CPU的TLBxv6在重新加载`satp`寄存器后，在`kvmini
 
 `main`函数调用`kinit`(***kernel/kalloc.c\***:27)来初始化分配器。`kinit`初始化空闲列表以保存从内核结束到`PHYSTOP`之间的每一页。xv6应该通过解析硬件提供的配置信息来确定有多少物理内存可用。然而，xv6假设机器有128兆字节的RAM。
 
+```c
+extern char end[]; // first address after kernel.
+                   // defined by kernel.ld.
+
+void
+kinit()
+{
+  initlock(&kmem.lock, "kmem");
+  freerange(end, (void*)PHYSTOP);
+}
+```
+
+kernel/spinlock.c
+
+```c
+void
+initlock(struct spinlock *lk, char *name)
+{
+  lk->name = name;
+  lk->locked = 0;
+  lk->cpu = 0;
+}
+```
+
+
+
 #### freerange,kfree,PGROUNDUP
 
 `kinit`调用`freerange`将内存添加到空闲列表中，在`freerange`中每页都会调用`kfree`。PTE只能引用在4096字节边界上对齐的物理地址（是4096的倍数），所以`freerange`使用`PGROUNDUP`来确保它只释放对齐的物理地址。分配器开始时没有内存；这些对`kfree`的调用给了它一些管理空间。
@@ -2858,9 +2895,69 @@ sfence.vma刷新当前CPU的TLBxv6在重新加载`satp`寄存器后，在`kvmini
 
 函数`kfree` (***kernel/kalloc.c\***:47)首先将内存中的每一个字节设置为1。这将导致使用释放后的内存的代码（使用“悬空引用”）读取到垃圾信息而不是旧的有效内容，从而希望这样的代码更快崩溃。然后`kfree`将页面前置（头插法）到空闲列表中：它将`pa`转换为一个指向`struct run`的指针`r`，在`r->next`中记录空闲列表的旧开始，并将空闲列表设置为等于`r`。
 
+```c
+void
+freerange(void *pa_start, void *pa_end)
+{
+  char *p;
+  p = (char*)PGROUNDUP((uint64)pa_start);
+  for(; p + PGSIZE <= (char*)pa_end; p += PGSIZE)
+    kfree(p);
+}
+```
+
+
+
+// Free the page of physical memory pointed at by v,
+// which normally should have been returned by a
+// call to kalloc().  (The exception is when
+// initializing the allocator; see kinit above.)
+
+```c
+void
+kfree(void *pa)
+{
+  struct run *r;
+
+  if(((uint64)pa % PGSIZE) != 0 || (char*)pa < end || (uint64)pa >= PHYSTOP)
+    panic("kfree");
+
+  // Fill with junk to catch dangling refs.
+  memset(pa, 1, PGSIZE);
+
+  r = (struct run*)pa;
+
+  acquire(&kmem.lock);
+  r->next = kmem.freelist;
+  kmem.freelist = r;
+  release(&kmem.lock);
+}
+```
+
 #### kalloc
 
 `kalloc`删除并返回空闲列表中的第一个元素。
+
+```c
+// Allocate one 4096-byte page of physical memory.
+// Returns a pointer that the kernel can use.
+// Returns 0 if the memory cannot be allocated.
+void *
+kalloc(void)
+{
+  struct run *r;
+
+  acquire(&kmem.lock);
+  r = kmem.freelist;
+  if(r)
+    kmem.freelist = r->next;
+  release(&kmem.lock);
+
+  if(r)
+    memset((char*)r, 5, PGSIZE); // fill with junk
+  return (void*)r;
+}
+```
 
 
 
@@ -2870,45 +2967,63 @@ sfence.vma刷新当前CPU的TLBxv6在重新加载`satp`寄存器后，在`kvmini
 
 
 
+当进程向xv6请求更多的用户内存时，xv6首先使用`kalloc`来分配物理页面。然后，它将PTE添加到进程的页表中，指向新的物理页面。Xv6在这些PTE中设置`PTE_W`、`PTE_X`、`PTE_R`、`PTE_U`和`PTE_V`标志。大多数进程不使用整个用户地址空间；xv6在未使用的PTE中留空`PTE_V`。
+
 Layout of a process's virtual address space
 
 ![image-20221205195416419](https://raw.githubusercontent.com/lozijy/image/main/image-20221205195416419.png)
 
+栈是单独一个页面，显示的是由`exec`创建后的初始内容。包含命令行参数的字符串以及指向它们的指针数组位于栈的最顶部。再往下是允许程序在`main`处开始启动的值（即`main`的地址、`argc`、`argv`），这些值产生的效果就像刚刚调用了`main(argc, argv)`一样。
 
+![image-20221206235556585](C:\Users\lonux\AppData\Roaming\Typora\typora-user-images\image-20221206235556585.png)
+
+为了检测用户栈是否溢出了所分配栈内存，xv6在栈正下方放置了一个无效的保护页（guard page）。如果用户栈溢出并且进程试图使用栈下方的地址，那么由于映射无效（`PTE_V`为0）硬件将生成一个页面故障异常。当用户栈溢出时，实际的操作系统可能会自动为其分配更多内存。
 
 ### 代码:sbrk
 
+`sbrk`是一个用于进程减少或增长其内存的系统调用。这个系统调用由函数`growproc`实现(***kernel/proc.c\***:239)。`growproc`根据`n`是正的还是负的调用`uvmalloc`或`uvmdealloc`。`uvmalloc`(***kernel/vm.c\***:229)用`kalloc`分配物理内存，并用`mappages`将PTE添加到用户页表中。`uvmdealloc`调用`uvmunmap`(***kernel/vm.c\***:174)，`uvmunmap`使用`walk`来查找对应的PTE，并使用`kfree`来释放PTE引用的物理内存。
+
+XV6使用进程的页表，不仅是告诉硬件如何映射用户虚拟地址，也是明晰哪一个物理页面已经被分配给该进程的唯一记录。这就是为什么释放用户内存（在`uvmunmap`中）需要检查用户页表的原因。
+
 ### 代码:exec
 
-进程在内存中不能访问其他其他进程的内存
-
-mmu将虚拟地址转化为物理地址
-
-寄存器satp保存着页表的位置，cpu告诉内存管理单元mmu到哪里寻找把虚拟地址转换为物理地址的映射，mmu不保存映射只做转换，
-
-每个进程拥有一个自己特有的页表，当进程切换时，它也会切换satp寄存器的内容。
-
-每个进程的satp寄存器的值是由内核保存的，写入或读取是一个特权指令，只有内核模式的代码能够修改它。
-
-画出来的像是每个虚拟地址都有都在映射中有一个条目，如果这么做的话会有2^64大，仅仅包含这张表就会使用掉所有的内存，这肯定是不现实的。
-
-其实不是对每个虚拟地址有一个映射，而是对每个页面有一个映射，在RSCV中，一个页是4KB，也就是4096字节。这是习惯决定的，几乎所有的处理器页面大小使用4KB，或者支持4KB
+`exec`是创建地址空间的用户部分的系统调用。它使用一个存储在文件系统中的文件初始化地址空间的用户部分。`exec`(***kernel/exec.c\***:13)使用`namei` (***kernel/exec.c\***:26)打开指定的二进制`path`，这在第8章中有解释。然后，它读取ELF头。Xv6应用程序以广泛使用的ELF格式描述，定义于(***kernel/elf.h\***)。ELF二进制文件由ELF头、`struct elfhdr`(***kernel/elf.h\***:6)，后面一系列的程序节头（section headers）、`struct proghdr`(***kernel/elf.h\***:25)组成。每个`proghdr`描述程序中必须加载到内存中的一节（section）；xv6程序只有一个程序节头，但是其他系统对于指令和数据部分可能各有单独的节。
 
 
 
-虚拟地址分为两部分:索引和偏移量，MMU做转换时使用索引在映射中找到页表编号，页表编号指向4096字节中的一些物理页，再通过偏移量12知道那个页的12个条目被使用
+ Note
 
-虚拟地址的最高25位没有使用，限制了虚拟地址空间，虚拟空间地址只有64-25=39位大概512G，索引还剩下了39位，27位作为索引，12位作为偏移地址，必须是12，因为2^12=4096，这样才能在页表中找到条目
+ELF文件格式：在计算机科学中，是一种用于二进制文件、可执行文件、目标代码、共享库和核心转储格式文件。ELF是UNIX系统实验室（USL）作为应用程序二进制接口（Application Binary Interface，ABI）而开发和发布的，也是Linux的主要可执行文件格式。ELF文件由4部分组成，分别是ELF头（ELF header）、程序头表（Program header table）、节（Section）和节头表（Section header table）。实际上，一个文件中不一定包含全部内容，而且它们的位置也未必如同所示这样安排，只有ELF头的位置是固定的，其余各部分的位置、大小等信息由ELF头中的各项值来决定。
 
-物理页面的4096字节是连续的在物理地址中，因为映射是以4096字节为粒度的
+第一步是快速检查文件可能包含ELF二进制的文件。ELF二进制文件以四个字节的“幻数”`0x7F`、“`E`”、“`L`”、“`F`”或`ELF_MAGIC`开始(***kernel/elf.h\***:3)。如果ELF头有正确的幻数，`exec`假设二进制文件格式良好。
 
-物理内存56位，这是设计师决定的，所以说物理内存比虚拟内存大(条目44位physical+12位偏移量)
+`exec`使用`proc_pagetable` (***kernel/exec.c\***:38)分配一个没有用户映射的新页表，使用`uvmalloc` (***kernel/exec.c\***:52)为每个ELF段分配内存，并使用`loadseg` (***kernel/exec.c\***:10)将每个段加载到内存中。`loadseg`使用`walkaddr`找到分配内存的物理地址，在该地址写入ELF段的每一页，并使用`readi`从文件中读取。
 
-真正的RISCV页表结构:多级结构
+使用`exec`创建的第一个用户程序`/init`的程序节标题如下：
 
-顶部9位作为顶层页表目录的索引，4096字节和页面大小一样
+```bash
+ # objdump -p _init 
+ user/_init: file format elf64-littleriscv 
+ Program Header: 
+     LOAD off 0x00000000000000b0 vaddr 0x0000000000000000 
+                                    paddr 0x0000000000000000 align 2**3 
+          filesz 0x0000000000000840 memsz 0x0000000000000858 flags rwx 
+     STACK off 0x0000000000000000 vaddr 0x0000000000000000 
+                                    paddr 0x0000000000000000 align 2**4 
+          filesz 0x0000000000000000 memsz 0x0000000000000000 flags rw-
+```
 
+程序节头的`filesz`可能小于`memsz`，这表明它们之间的间隙应该用零来填充（对于C全局变量），而不是从文件中读取。对于***/init\***，`filesz`是2112字节，`memsz`是2136字节，因此`uvmalloc`分配了足够的物理内存来保存2136字节，但只从文件***/init\***中读取2112字节。
 
+现在`exec`分配并初始化用户栈。它只分配一个栈页面。`exec`一次将参数中的一个字符串复制到栈顶，并在`ustack`中记录指向它们的指针。它在传递给`main`的`argv`列表的末尾放置一个空指针。`ustack`中的前三个条目是伪返回程序计数器（fake return program counter）、`argc`和`argv`指针。
+
+`exec`在栈页面的正下方放置了一个不可访问的页面，这样试图使用超过一个页面的程序就会出错。这个不可访问的页面还允许`exec`处理过大的参数；在这种情况下，被`exec`用来将参数复制到栈的函数`copyout`(***kernel/vm.c\***:355) 将会注意到目标页面不可访问，并返回-1。
+
+在准备新内存映像的过程中，如果`exec`检测到像无效程序段这样的错误，它会跳到标签`bad`，释放新映像，并返回-1。`exec`必须等待系统调用会成功后再释放旧映像：因为如果旧映像消失了，系统调用将无法返回-1。`exec`中唯一的错误情况发生在映像的创建过程中。一旦映像完成，`exec`就可以提交到新的页表(***kernel/exec.c\***:113)并释放旧的页表(***kernel/exec.c\***:117)。
+
+`exec`将ELF文件中的字节加载到ELF文件指定地址的内存中。用户或进程可以将他们想要的任何地址放入ELF文件中。因此`exec`是有风险的，因为ELF文件中的地址可能会意外或故意的引用内核。对一个设计拙劣的内核来说，后果可能是一次崩溃，甚至是内核的隔离机制被恶意破坏（即安全漏洞）。xv6执行许多检查来避免这些风险。例如，`if(ph.vaddr + ph.memsz < ph.vaddr)`检查总和是否溢出64位整数，危险在于用户可能会构造一个ELF二进制文件，其中的`ph.vaddr`指向用户选择的地址，而`ph.memsz`足够大，使总和溢出到0x1000，这看起来像是一个有效的值。在xv6的旧版本中，用户地址空间也包含内核（但在用户模式下不可读写），用户可以选择一个与内核内存相对应的地址，从而将ELF二进制文件中的数据复制到内核中。在xv6的RISC-V版本中，这是不可能的，因为内核有自己独立的页表；`loadseg`加载到进程的页表中，而不是内核的页表中。
+
+内核开发人员很容易省略关键的检查，而现实世界中的内核有很长一段丢失检查的历史，用户程序可以利用这些检查的缺失来获得内核特权。xv6可能没有完成验证提供给内核的用户级数据的全部工作，恶意用户程序可以利用这些数据来绕过xv6的隔离。
 
 # 第四章 Traps and system calls
 
